--- a/django_ngq/ngq_app/templates/ngq_app/loading.html
+++ b/django_ngq/ngq_app/templates/ngq_app/loading.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading - Next-Gen QA</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{% static 'ngq_app/styles.css' %}">
 </head>
 <body>
     <!-- Navigation -->
@@ -22,6 +22,6 @@
         <p>Generating your test cases, please wait...</p>
     </section>
 
-    <script src="script.js"></script>
+    <script src="{% static 'ngq_app/script.js'%}"></script>
 </body>
 </html>
