implemented rough table rendering. TODO : cleaning code and notebooks due to the amount of tests done

--- a/django_ngq/ngq_app/templates/ngq_app/home.html
+++ b/django_ngq/ngq_app/templates/ngq_app/home.html
@@ -87,6 +87,6 @@
         <p>&copy; 2024 Next-Gen QA | All Rights Reserved</p>
     </footer>
 
-    <script src="{% static 'ngq_app/script.js'%}"></script>
+    <!-- <script src="{% static 'ngq_app/script.js'%}"></script> -->
 </body>
 </html>
