reviewed todos and updated todos. fixed navigation links of templates. added pseudocode for results data display (timestamp/etc)

--- a/django_ngq/ngq_app/templates/ngq_app/home.html
+++ b/django_ngq/ngq_app/templates/ngq_app/home.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
-            <a href="home.html">Next-Gen QA</a>
+            <a href="/">Next-Gen QA</a>
         </div>
     </nav>
 
