implemented other elements to result page

--- a/django_ngq/ngq_app/templates/ngq_app/results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/results.html
@@ -19,12 +19,12 @@
     <!-- Results Section -->
     <main class="results">
         <div class="info">
-            <p>Test case generated for: <span id="website-url">Loading...</span></p>
-            <p>Timestamp: <span id="timestamp">Loading...</span></p>
+            <p>Test case generated for: <span id="website-url">{{url}}</span></p>
+            <p>Timestamp: <span id="timestamp">{{timestamp}}</span></p>
         </div>
 
         <div class="header-row">
-            <p class="generated-count"><span id="test-case-count">0</span> Test Cases Generated</p>
+            <p class="generated-count"><span id="test-case-count">{{test_case_count}}</span> Test Cases Generated</p>
             <div class="buttons">
                 <button id="download-btn">Download</button>
                 <button id="regenerate-btn">Regenerate</button>
