--- a/django_ngq/ngq_app/templates/ngq_app/results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/results.html
@@ -28,6 +28,7 @@
             <div class="buttons">
                 <button id="download-btn">Download</button>
                 <button id="regenerate-btn">Regenerate</button>
+                <button id="new-url-btn">New URL</button>
             </div>
         </div>
 
