--- a/front-end components/styles.css
+++ b/front-end components/styles.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     background-color: white;
     color: #06151b;
 }
@@ -11,14 +11,34 @@ body {
 nav {
     width: 100%;
     position: fixed;
-    background:linear-gradient(90deg, #A5E9E1, #388186);
-    padding: 10px 20px;
+    background: black;
+    padding: 20px 40px;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
 }
+
 nav .logo a{
-    font-size: 24px;
-    font-weight: bold;
-    color: black;
-    text-decoration: none; 
+    font-weight: 600;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+    margin: 0;
+    padding: 0;
+}
+
+nav a {
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+nav a:hover {
+    text-decoration: underline;
 }
 
 /* hero */
@@ -29,9 +49,9 @@ nav .logo a{
     justify-content: center;
     height: 100vh;
     text-align: center;
-    background:linear-gradient(90deg, #A5E9E1, #388186);
-    
-    /*o #A5E9E1, #388186 /d #68aeae, #4f7c7c /n #52d7c7, #5cd65c /m #68aeae, #68ae68* /b #52d7c7, #48c985, #5cd65c */
+
+    background: white;
+    /*background:linear-gradient(90deg, #72f1dc, #2c8780);*/
 }
 .hero h1 {
     font-size: 46px;
@@ -39,7 +59,7 @@ nav .logo a{
     color: black;
 }
 .hero h2, .hero h3 {
-    color: black;
+    color: #003d5b;
 }
 .hero p {
     font-size: 18px;
@@ -61,7 +81,7 @@ nav .logo a{
 .hero button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #06151b;
+    background-color: #1d1d2c;
     color: #d1d1d1;
     border: none;
     border-radius: 5px;
@@ -103,9 +123,10 @@ nav .logo a{
 
 /* about */
 .about {
-    padding: 100px 300px;
+    padding: 100px;
     text-align: center;
-    background: #6fb5b4;
+    background: #f4f4f4;
+    color: #003d5b;
 }
 .about h2 {
     font-size: 26px;
@@ -119,7 +140,7 @@ nav .logo a{
 /* FAQ */
 .faq {
     padding: 50px 180px;
-    background-color: #f4f4f4;
+    background-color: #e8f2f5;
     text-align: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
@@ -156,71 +177,60 @@ nav .logo a{
 }
 
 
-/*************************LOADING SCREEN*************************/
-/* loading spinner test */
-.loading {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-    background: /*#5c9595*/ linear-gradient(90deg, #A5E9E1, #388186);
-    color: black;
-}
-
-.loading .spinner {
-    width: 50px;
-    height: 50px;
-    border: 5px solid rgba(255, 255, 255, 0.3);
-    border-top: 5px solid black;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-    margin-bottom: 20px;
-}
-
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-
 /*************************RESULT SCREEN*************************/
-/* results table */
 main.results {
     /*background:linear-gradient(90deg, #A5E9E1, #388186);*/
-    padding: 100px 20px;
+    padding: 50px;
     min-height: calc(100vh - 140px);
     display: flex;
     flex-direction: column;
-    gap: 20px;
 }
 
-/* info */
-.info p {
-    margin: 0;
+.results-content {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 60px 20px 20px;
+}
+
+/* left column */
+.info {
+    flex: 1;
+    background: #f8f8f8;
+    padding: 15px 25px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15px;
     font-size: 16px;
 }
 
-/* header row */
-.header-row {
+/* right column */
+.test-case-summary {
+    flex: 1;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
 }
+
 .generated-count {
-    font-size: 18px;
+    font-size: 50px;
     font-weight: bold;
+    line-height: 1;
+    margin: 30px 0px 0px;
 }
-.buttons {
+
+.test-case-text {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.action-buttons {
     display: flex;
     gap: 10px;
+    margin-top: 30px;
 }
-.buttons button {
+
+.action-buttons button {
     padding: 10px 15px;
     font-size: 16px;
     color: #06151b;
@@ -229,7 +239,8 @@ main.results {
     border-radius: 5px;
     cursor: pointer;
 }
-.buttons button:hover {
+
+.action-buttons button:hover {
     background-color: #06151b;
     color: white;
 }
@@ -245,9 +256,12 @@ main.results {
     overflow-x: auto;
 }
 table {
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: 10px;
+    overflow: hidden;
     width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
+    border: 1px solid #ccc;
 }
 th, td {
     border: 1px solid #ddd;
@@ -259,14 +273,28 @@ th {
     font-weight: bold;
 }
 
+table th:first-child {
+    border-top-left-radius: 10px;
+}
+table th:last-child {
+    border-top-right-radius: 10px;
+}
+table tr:last-child td:first-child {
+    border-bottom-left-radius: 10px;
+}
+table tr:last-child td:last-child {
+    border-bottom-right-radius: 10px;
+}
+
 /* footer */
 footer {
     margin-top: auto; 
     padding-bottom: 5px;
-    background: #388186;
+    background: black;
     border-top: 1px solid #ccc;
     text-align: center;
     font-size: 14px;
+    color: white;
 }
 
 /*tablet, mobile*/
