added configurations (asgi daphne channels and websocket)

--- a/django_ngq/ngq_app/templates/ngq_app/loading.html
+++ b/django_ngq/ngq_app/templates/ngq_app/loading.html
@@ -29,7 +29,7 @@
                 .then(response => response.json())
                 .then(data => {
                     if (data.status === 'completed') {
-                        window.location.href = '/results';
+                        window.location.href = '/loading_results';
                     }
                 });
         }
