--- a/front-end components/styles.css
+++ b/front-end components/styles.css
@@ -7,7 +7,7 @@ body {
     color: #06151b;
 }
 
-/* navigation */
+/*************************NAVIGATION*************************/
 nav {
     width: 100%;
     position: fixed;
@@ -17,11 +17,9 @@ nav {
     justify-content: space-between;
     box-sizing: border-box;
 }
-
 nav .logo a{
     font-weight: 600;
 }
-
 nav ul {
     list-style: none;
     display: flex;
@@ -29,37 +27,48 @@ nav ul {
     margin: 0;
     padding: 0;
 }
-
 nav a {
     font-size: 18px;
     color: white;
     text-decoration: none;
     font-weight: normal;
 }
-
 nav a:hover {
     text-decoration: underline;
 }
 
-/* hero */
+/*************************HOME*************************/
 .hero {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100vh;
+    text-align: left;
+    padding: 0px 50px;
+    gap: 30px;
+    
+    background: white;
+}
+/*left*/
+.hero-content {
+    flex: 1;
+    max-width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     text-align: center;
-
-    background: white;
-    /*background:linear-gradient(90deg, #72f1dc, #2c8780);*/
 }
 .hero h1 {
-    font-size: 46px;
-    margin-bottom: 10px;
+    font-size: 56px;
+    font-weight: 700;
     color: black;
+    margin: 0px 0px 25px;
 }
-.hero h2, .hero h3 {
-    color: #003d5b;
+.hero h2 {
+    font-size: 20px;
+    font-weight: 200;
+    color: black;
 }
 .hero p {
     font-size: 18px;
@@ -74,110 +83,133 @@ nav a:hover {
 .hero input {
     padding: 10px;
     font-size: 16px;
-    width: 300px;
+    width: 250%;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 10px;
+    text-align: center;
 }
 .hero button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #1d1d2c;
-    color: #d1d1d1;
+    background-color: black;
+    color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
 }
 .hero button:hover {
     background: #e8e8e8;
     color: black;
 }
-
-/* features */
-.features {
+/*right*/
+.hero-image {
+    flex: 1;
+    max-width: 50%;
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 200px;
-    padding: 60px 20px;
-    background: #f4f4f4;
-    text-align: center;
+    padding-top: 100px;
 }
-.feature {
-    max-width: 500px;
-}
-.feature h3 {
-    font-size: 28px;
-}
-.circle {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: #68aeae;
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto 20px;
-    font-size: 50px;
+.hero-image img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 8px;
 }
 
-/* about */
+/*************************ABOUT*************************/
 .about {
-    padding: 100px;
-    text-align: center;
-    background: #f4f4f4;
-    color: #003d5b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 50px 60px;
+    background: white;
+    color: black;
 }
 .about h2 {
-    font-size: 26px;
-    margin-bottom: 20px;
+    font-size: 28px;
+    font-weight: 700;
 }
 .about p {
-    font-size: 16px;
-    line-height: 1.6;
+    font-size: 18px;
+    line-height: 1.7;
+    padding: 0px 60px;
+}
+/*left*/
+.about-content {
+    flex: 1;
+    max-width: 50%;
+    text-align: center;
+}
+/*right*/
+.about-image {
+    flex: 1;
+    max-width: 50%;
+    display: flex;
+    justify-content: center;
+}
+.about-image img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 8px;
 }
 
-/* FAQ */
+/*************************FAQ*************************/
 .faq {
-    padding: 50px 180px;
-    background-color: #e8f2f5;
+    padding: 80px 150px;
+    background-color: white;
     text-align: center;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 40px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+}
+.faq-item:last-child {
+    grid-column: span 2;
+}
+.faq-item:last-child p {
+    text-align: center;
 }
 .faq h2 {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
+    font-size: 28px;
     grid-column: span 2;
 }
 .faq-item {
-    border: 1px solid #ccc;
-    padding: 15px;
-    border-radius: 8px; 
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 10px;
+    background: #f9f9f9;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
 }
 .faq-item h4 {
-    font-size: 18px;
-    margin: 5px 0px 10px 0px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
 }
 .faq-item p {
-    font-size: 16px;
+    text-align: left;
+    font-size: 17px;
+    line-height: 1.6;
     margin: 0;
 }
+.faq-item:last-child p {
+    text-align: center;
+}
 .faq-item a {
-    color: #06151b;
+    color: #005a72;
     text-decoration: none;
+    font-weight: 500;
 }
 .faq-item:hover {
     border: 1px solid #4f7c7c;
+    background: #f1f8f8;
 }
 .faq-item a:hover {
-    color: #06151b;
+    color: #003d4d;
     text-decoration: underline;
 }
 
 
-/*************************RESULT SCREEN*************************/
+/*************************RESULTS*************************/
 main.results {
     /*background:linear-gradient(90deg, #A5E9E1, #388186);*/
     padding: 50px;
@@ -185,14 +217,12 @@ main.results {
     display: flex;
     flex-direction: column;
 }
-
 .results-content {
     display: flex;
     justify-content: space-between;
     gap: 20px;
     padding: 60px 20px 20px;
 }
-
 /* left column */
 .info {
     flex: 1;
@@ -203,7 +233,6 @@ main.results {
     margin-bottom: 15px;
     font-size: 16px;
 }
-
 /* right column */
 .test-case-summary {
     flex: 1;
@@ -211,25 +240,21 @@ main.results {
     flex-direction: column;
     align-items: center;
 }
-
 .generated-count {
     font-size: 50px;
     font-weight: bold;
     line-height: 1;
     margin: 30px 0px 0px;
 }
-
 .test-case-text {
     font-size: 16px;
     font-weight: 600;
 }
-
 .action-buttons {
     display: flex;
     gap: 10px;
     margin-top: 30px;
 }
-
 .action-buttons button {
     padding: 10px 15px;
     font-size: 16px;
@@ -239,18 +264,15 @@ main.results {
     border-radius: 5px;
     cursor: pointer;
 }
-
 .action-buttons button:hover {
     background-color: #06151b;
     color: white;
 }
-
 /* summary */
 .summary {
     font-size: 16px;
     margin: 0;
 }
-
 /* table */
 .table-container {
     overflow-x: auto;
@@ -272,7 +294,6 @@ th {
     background-color: #f4f4f4;
     font-weight: bold;
 }
-
 table th:first-child {
     border-top-left-radius: 10px;
 }
@@ -286,7 +307,7 @@ table tr:last-child td:last-child {
     border-bottom-right-radius: 10px;
 }
 
-/* footer */
+/*************************FOOTER*************************/
 footer {
     margin-top: auto; 
     padding-bottom: 5px;
@@ -295,37 +316,4 @@ footer {
     text-align: center;
     font-size: 14px;
     color: white;
-}
-
-/*tablet, mobile*/
-@media (max-width: 768px) {
-    .features {
-        flex-direction: column; 
-        gap: 60px;
-    }
-    .feature {
-        max-width: 100%;
-    }
-
-    .hero input {
-        width: 80%; 
-    }
-    .hero .input-container {
-        width: 50%;
-    }
-
-    .faq {
-        display: flex;
-        flex-direction: column;
-        padding: 10%;
-        gap: 30px;
-    }
-
-    .about {
-        padding: 10% 10%;
-    }
-
-    .header-row {
-        flex-direction: column;
-    }
 }
