attempt : fix table division issue at dynamic results page

--- a/django_ngq/ngq_app/templates/ngq_app/loading_results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/loading_results.html
@@ -63,7 +63,7 @@
             document.getElementById('test-case-count').innerText = context.test_case_count;
 
             // Update the page with the HTML snippet
-            document.getElementById('dynamic-content').innerHTML = context.test_cases_undivided;
+            document.getElementById('dynamic-content').innerHTML = context.test_cases_dynamic;
         };
 
         window.onbeforeunload = function() {
