--- a/django_ngq/ngq_app/templates/ngq_app/results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/results.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results - Next-Gen QA</title>
     <link rel="stylesheet" href="{% static 'ngq_app/styles.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -14,47 +15,66 @@
         <div class="logo">
             <a href="/">Next-Gen QA</a>
         </div>
+        <ul>
+            <li><a href="/about">about</a></li>
+            <li><a href="/faq">faq</a></li>
+        </ul>
     </nav>
 
     <!-- Results Section -->
     <main class="results">
-        <div class="info">
-            <p>Test case generated for: <span id="website-url">{{url}}</span></p>
-            <p>Timestamp: <span id="timestamp">{{timestamp}}</span></p>
-        </div>
+        <div class="results-content">
+            <!-- Left column -->
+            <!-- Loading... or {{}}-->
+            <div class="info">
+                <p><strong>Test cases generated for:</strong> <span id="test-url">{{url}}</span></p>
+                <p><strong>Total Elements Identified:</strong> <span id="total-elements">{{ui_element_count}}</span></p>
+                <ul id="breakdown-list">
+                    <li>Buttons: <span id="buttons-count">{{categories.0}}</span></li>
+                    <li>Links: <span id="links-count">{{categories.1}}</span></li>
+                    <li>Paragraphs: <span id="paragraphs-count">{{categories.2}}</span></li>
+                    <li>Submit Fields: <span id="submit-fields-count">{{categories.3}}</span></li>
+                    <li>Inputs Fields: <span id="input-fields-count">{{categories.4}}</span></li>
+                </ul>
+            </div>
 
-        <div class="header-row">
-            <p class="generated-count"><span id="test-case-count">{{test_case_count}}</span> Test Cases Generated</p>
-            {% for category in categories %}
-                <p class="generated-count"><span id="test-case-count">{{category_count|index:forloop.counter0}}</span> from {{category}} elements</p>
-            {% endfor %}
-            <div class="buttons">
-                <button id="download-btn">Download CSV</button>
-                <button id="download-pdf-btn">Print</button>
-                <button id="regenerate-btn">Regenerate</button>
-                <button id="new-url-btn">New URL</button>
+            <!-- Right column-->
+            <div class="test-case-summary">
+                <p class="generated-count">
+                    <span id="test-case-progress">{{test_case_count}}</span> / <span id="test-case-total">{{ui_element_count}}</span>
+                </p>
+                <!-- generating test cases... | generation completed! -->
+                <p id="generation-status">generation completed!</p>
+                <div class="action-buttons">
+                    <button id="print-btn">Print</button>
+                    <button id="download-btn">Download CSV</button>
+                    <button id="regenerate-btn">Regenerate</button>
+                    <button id="new-url-btn">New URL</button>
+                </div>
             </div>
         </div>
 
+        <!-- Summary
         <p class="summary">
             Our system analyzed your website and generated the following test cases, ensuring comprehensive coverage for your QA process.
-        </p>
+        </p> -->
 
         <!-- Results Table -->
-        <div class="table-container">
-            {% for table in test_cases %}
+            <!-- {% for table in test_cases %}
             <h3>{{categories|index:forloop.counter0}}</h3>
             <div>
                 {{ table|safe }} 
             </div>
-            {% endfor %}
+            {% endfor %} -->
+        <div class="table-container">
+            {{dyanamic_test_cases|safe}}
         </div>        
 
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Next-Gen QA. All rights reserved.</p>
+        <p>&copy; 2024 Next-Gen QA | All Rights Reserved</p>
     </footer>
 
     <!-- <script src="{% static 'ngq_app/script.js'%}"></script> -->
