--- a/django_ngq/ngq_app/templates/ngq_app/pdf_template.html
+++ b/django_ngq/ngq_app/templates/ngq_app/pdf_template.html
@@ -11,60 +11,63 @@
             margin: 1in;
         }
         
+        /* General Reset */
         body {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Inter', Arial, sans-serif;
             background-color: white;
             color: #06151b;
         }
 
-        p {
-            word-wrap: break-word;
-            white-space: normal;
-        }
         
-        div {
-            overflow: auto;
-        }
-
-        body, p, li {
-            line-height: 1.5;
-        }
-
-        
-        /* results table */
+        /*************************RESULTS*************************/
         main.results {
             /*background:linear-gradient(90deg, #A5E9E1, #388186);*/
-            padding: 100px 20px;
+            padding: 50px;
             min-height: calc(100vh - 140px);
             display: flex;
             flex-direction: column;
-            gap: 20px;
-            page-break-inside: avoid;
         }
-
-        /* info */
-        .info p {
-            margin: 0;
-            font-size: 16px;
-        }
-
-        /* header row */
-        .header-row {
+        .results-content {
             display: flex;
             justify-content: space-between;
+            gap: 20px;
+            padding: 60px 20px 20px;
+        }
+        /* left column */
+        .info {
+            flex: 1;
+            background: #f8f8f8;
+            padding: 15px 25px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin-bottom: 15px;
+            font-size: 16px;
+        }
+        /* right column */
+        .test-case-summary {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
             align-items: center;
         }
         .generated-count {
-            font-size: 18px;
+            font-size: 50px;
             font-weight: bold;
+            line-height: 1;
+            margin: 30px 0px 0px;
         }
-        .buttons {
+        .test-case-text {
+            font-size: 16px;
+            font-weight: 600;
+        }
+        .action-buttons {
             display: flex;
             gap: 10px;
+            margin-top: 30px;
         }
-        .buttons button {
+        .action-buttons button {
             padding: 10px 15px;
             font-size: 16px;
             color: #06151b;
@@ -73,120 +76,116 @@
             border-radius: 5px;
             cursor: pointer;
         }
-        .buttons button:hover {
+        .action-buttons button:hover {
             background-color: #06151b;
             color: white;
         }
-
         /* summary */
         .summary {
             font-size: 16px;
             margin: 0;
         }
-
         /* table */
         .table-container {
             overflow-x: auto;
-            page-break-inside: avoid;
         }
         table {
+            border-collapse: separate;
+            border-spacing: 0;
+            border-radius: 10px;
+            overflow: hidden;
             width: 100%;
-            border-collapse: collapse;
-            margin-top: 10px;
-            table-layout: fixed; 
-            page-break-inside: avoid;
+            border: 1px solid #ccc;
         }
         th, td {
-            word-wrap: break-word;
-            overflow-wrap: break-word;
             border: 1px solid #ddd;
             padding: 10px;
-            height: auto;
             text-align: left;
-            page-break-inside: avoid;
-            overflow: hidden; 
-            page-break-inside: avoid;
         }
         th {
             background-color: #f4f4f4;
             font-weight: bold;
-            page-break-inside: avoid;
+        }
+        table th:first-child {
+            border-top-left-radius: 10px;
+        }
+        table th:last-child {
+            border-top-right-radius: 10px;
+        }
+        table tr:last-child td:first-child {
+            border-bottom-left-radius: 10px;
+        }
+        table tr:last-child td:last-child {
+            border-bottom-right-radius: 10px;
         }
 
-        /* footer */
+        /*************************FOOTER*************************/
         footer {
             margin-top: auto; 
             padding-bottom: 5px;
-            background: #388186;
+            background: black;
             border-top: 1px solid #ccc;
             text-align: center;
             font-size: 14px;
-        }
-
-        /*tablet, mobile*/
-        @media (max-width: 768px) {
-            .features {
-                flex-direction: column; 
-                gap: 60px;
-            }
-            .feature {
-                max-width: 100%;
-            }
-
-            .hero input {
-                width: 80%; 
-            }
-            .hero .input-container {
-                width: 50%;
-            }
-
-            .faq {
-                display: flex;
-                flex-direction: column;
-                padding: 10%;
-                gap: 30px;
-            }
-
-            .about {
-                padding: 10% 10%;
-            }
-
-            .header-row {
-                flex-direction: column;
-            }
+            color: white;
         }
     </style>
 </head>
 <body>
     <!-- Results Section -->
     <main class="results">
-        <div class="info">
-            <p>Test case generated for: <span id="website-url">{{url}}</span></p>
-            <p>Timestamp: <span id="timestamp">{{timestamp}}</span></p>
+        <div class="results-content">
+            <!-- Left column -->
+            <!-- Loading... or {{}}-->
+            <div class="info">
+                <p><strong>Test cases generated for:</strong> <span id="test-url">{{url}}</span></p>
+                <p><strong>Total Elements Identified:</strong> <span id="total-elements">{{ui_element_count}}</span></p>
+                <ul id="breakdown-list">
+                    <li>Buttons: <span id="buttons-count">{{categories.0}}</span></li>
+                    <li>Links: <span id="links-count">{{categories.1}}</span></li>
+                    <li>Paragraphs: <span id="paragraphs-count">{{categories.2}}</span></li>
+                    <li>Submit Fields: <span id="submit-fields-count">{{categories.3}}</span></li>
+                    <li>Inputs Fields: <span id="input-fields-count">{{categories.4}}</span></li>
+                </ul>
+            </div>
+
+            <!-- Right column-->
+            <div class="test-case-summary">
+                <p class="generated-count">
+                    <span id="test-case-progress">{{test_case_count}}</span> / <span id="test-case-total">{{ui_element_count}}</span>
+                </p>
+                <!-- generating test cases... | generation completed! -->
+                <p id="generation-status">generation completed!</p>
+                <div class="action-buttons">
+                    <button id="print-btn">Print</button>
+                    <button id="download-btn">Download CSV</button>
+                    <button id="regenerate-btn">Regenerate</button>
+                    <button id="new-url-btn">New URL</button>
+                </div>
+            </div>
         </div>
 
-        <div class="header-row">
-            <p class="generated-count"><span id="test-case-count">{{test_case_count}}</span> Test Cases Generated</p>
-            {% for category in categories %}
-                <p class="generated-count"><span id="test-case-count">{{category_count|index:forloop.counter0}}</span> from {{category}} elements</p>
-            {% endfor %}
-        </div>
+        <!-- Summary
+        <p class="summary">
+            Our system analyzed your website and generated the following test cases, ensuring comprehensive coverage for your QA process.
+        </p> -->
 
         <!-- Results Table -->
-        <div class="table-container" >
-            {% for table in test_cases %}
+            <!-- {% for table in test_cases %}
             <h3>{{categories|index:forloop.counter0}}</h3>
             <div>
                 {{ table|safe }} 
             </div>
-            {% endfor %}
+            {% endfor %} -->
+        <div class="table-container">
+            {{dyanamic_test_cases|safe}}
         </div>        
 
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Next-Gen QA. All rights reserved.</p>
+        <p>&copy; 2024 Next-Gen QA | All Rights Reserved</p>
     </footer>
 </body>
 </html>
